--- a/www/templates/tab-client.html
+++ b/www/templates/tab-client.html
@@ -1,8 +1,17 @@
 <ion-view view-title="顾村免费找工作">
   <ion-content>
-  <ion-searchbar ngModel＝"myInput" class="" showCancelButton="true" ionInput="onInput($event)" 
+ <!--  <ion-searchbar ngModel＝"myInput" class="" showCancelButton="true" ionInput="onInput($event)" 
   ionCancel="onCancel($event)">
-</ion-searchbar>
+</ion-searchbar> -->
+<div class="bar bar-header item-input-inset">
+  <label class="item-input-wrapper">
+    <i class="icon ion-ios-search placeholder-icon"></i>
+    <input type="search" placeholder="Search">
+  </label>
+  <button class="button button-clear">
+    Cancel
+  </button>
+</div>
     <ion-list>
       <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
         <img ng-src="{{chat.face}}">
